# libuvc

./: .gitignore  CMakeLists.txt  package.xml
include/libuvc/: libuvc.h  libuvc_config.h
src/: ctrl.c
